Reapply fix to fix RTL horizontal scrolling issue

--- a/css-rtl/header-rtl.scss
+++ b/css-rtl/header-rtl.scss
@@ -134,3 +134,8 @@
     right: -8px;
     left: auto;
 }
+
+.language-picker__dropdown {
+    right: -9999px;
+    left: auto;
+}
